sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:4: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var li:Color = getColor(0);
                         ^DutchFlagAlgo:8: error: type mismatch;
 found   : Int
 required: java.awt.Color
    li = getColor(i);
                 ^